Made public get requests open again
